--- a/nephilim.online.creator.front/src/app/modules/admin/admin.component.html
+++ b/nephilim.online.creator.front/src/app/modules/admin/admin.component.html
@@ -1,4 +1,4 @@
-<p>admin works!</p>
+<p>{{degreeMessage$|async}}</p>
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
   <!-- This is the tree node template for leaf nodes -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
